fix: if jump target is undefined, so None as target

--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -12,6 +12,7 @@
 .ol-popup {
 	position: absolute;
 	background: linear-gradient(180deg, #010412 0%, #010412 45%, #011b2b 100%);
+	padding: 3rem;
 	border: 3px solid #00c5c8;
 	color: #fff;
 	-webkit-filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.2));
